# CosyVoice2_ComfyUI

./: .gitmodules  README.md  __init__.py  example3S.json  pyproject.toml  pyprojext.toml  web.py
.github/workflows/: publish.yml
cosyvoice/cli/: model.py
