[project]
name = "cosyvoice2_comfyui"
description = "A plugin of ComfyUI for CosyVoice2, one component for text to Sonic Video"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["--extra-index-url https://download.pytorch.org/whl/cu121", "--extra-index-url https://pypi.nvidia.com", "--trusted-host download.pytorch.org", "--trusted-host pypi.nvidia.com", "audioseal==0.1.4", "conformer==0.3.2", "diffusers==0.27.2", "funasr==1.2.0", "gdown==5.1.0", "huggingface-hub==0.23.5", "hydra-core==1.3.2", "HyperPyYAML==1.2.2", "inflect==7.3.1", "librosa==0.10.2", "lightning==2.2.4", "matplotlib==3.7.5", "modelscope==1.17.1", "networkx==3.1", "omegaconf==2.3.0", "onnx==1.16.0", "onnxruntime-gpu==1.17.0", "onnxconverter_common==1.14.0", "openai-whisper==20231117", "protobuf==3.20.2", "pydantic==2.7.0", "rich==13.7.1", "soundfile==0.12.1", "tensorboard==2.14.0", "tensorrt-cu12==10.0.1", "tensorrt-cu12-bindings==10.0.1", "tensorrt-cu12-libs==10.0.1", "torch==2.3.1", "torchaudio==2.3.1", "transformers==4.40.1", "uvicorn==0.30.0", "wget==3.2", "fastapi==0.111.0", "fastapi-cli==0.0.4", "WeTextProcessing==1.0.3"]

[project.urls]
Repository = "https://github.com/benda1989/CosyVoice2_ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "CosyVoice2_ComfyUI"
Icon = ""
